--- a/gnec_hackathon/backend/asl-service/.env-example
+++ b/gnec_hackathon/backend/asl-service/.env-example
@@ -1,19 +1,24 @@
-# ASL Service Environment Variables
-
-# Server settings
+# ASL Service Configuration
 PORT=8000
-CORS_ORIGINS=http://localhost:3000
 
-# Model settings
-USE_MOCK_MODEL=false
+# Model paths
 MODEL_SAVE_DIR=../../../gnec_hackathon/ai/models
+BEST_MODEL_PATH=../../../gnec_hackathon/ai/models/best_lstm_model_sequences_sorted.pth
+LABEL_MAP_PATH=../../../gnec_hackathon/ai/models/label_map_sequences.pickle
+
+# Model parameters
+SEQUENCE_LENGTH=10
+NUM_LANDMARKS=21
+FEATURES_PER_LANDMARK=2
 PREDICTION_THRESHOLD=0.7
 
-# Gemini API settings
-GEMINI_API_KEY=your_gemini_api_key_here
-
-# Recognition settings
-SEQUENCE_LENGTH=10
+# Recognition parameters
 STABLE_THRESHOLD=8
 REQUIRED_HOLD_TIME=0.0
-COOLDOWN_TIME=1.5 
+COOLDOWN_TIME=1.5
+
+# CORS settings
+CORS_ORIGINS=http://localhost:3000
+
+# Gemini API settings - Replace with your actual API key from https://aistudio.google.com/
+GEMINI_API_KEY=your_gemini_api_key_here 
